--- a/tools/docker/specs/tensorflow/resnet50-fp32-inference_spec.yml
+++ b/tools/docker/specs/tensorflow/resnet50-fp32-inference_spec.yml
@@ -28,6 +28,8 @@ slice_sets:
                 uri: models/quickstart/image_recognition/tensorflow/resnet50/inference/cpu/fp32/.docs/description.md
               - name: Download link
                 uri: models/quickstart/image_recognition/tensorflow/resnet50/inference/cpu/fp32/.docs/download.md
+              - name: Datasets
+                uri: models/quickstart/image_recognition/tensorflow/resnet50/inference/cpu/int8/.docs/datasets.md
               - name: Quick Start Scripts
                 uri: models/quickstart/image_recognition/tensorflow/resnet50/inference/cpu/fp32/.docs/quickstart.md
               - name: Bare Metal
@@ -38,6 +40,46 @@ slice_sets:
                 uri: models/quickstart/image_recognition/tensorflow/resnet50/inference/cpu/fp32/.docs/advancedoptions.md
               - name: License link
                 uri: models/quickstart/image_recognition/tensorflow/resnet50/inference/cpu/fp32/.docs/license.md
+            - docs:
+              - name: Title
+                uri: models/quickstart/image_recognition/tensorflow/resnet50/inference/cpu/fp32/.docs/title.md
+              - name: Description
+                uri: models/quickstart/image_recognition/tensorflow/resnet50/inference/cpu/fp32/.docs/description.md
+              - name: Datasets
+                uri: models/quickstart/image_recognition/tensorflow/resnet50/inference/cpu/fp32/.docs/datasets.md
+              - name: Quick Start Scripts
+                uri: models/quickstart/image_recognition/tensorflow/resnet50/inference/cpu/fp32/.docs/quickstart.md
+              - name: AI Kit
+                uri: models/quickstart/image_recognition/tensorflow/resnet50/inference/cpu/fp32/.docs/aikit.md
+              - name: Resources
+                uri: models/quickstart/common/.docs/resources_with_portal_link.md
+              name: README.md
+              text_replace:
+                <mode>: inference
+                <model name>: ResNet50
+                <precision>: FP32
+                <use case>: image_recognition
+                <workload container url>: https://software.intel.com/content/www/us/en/develop/articles/containers/resnet50-fp32-inference-tensorflow-container.html
+              uri: models/benchmarks/image_recognition/tensorflow/resnet50/inference/fp32
+            - docs:
+              - name: Title
+                uri: models/quickstart/common/.docs/advanced/title.md
+              - name: Description
+                uri: models/quickstart/common/.docs/advanced/description.md
+              - name: Setup
+                uri: models/quickstart/common/.docs/advanced/setup.md
+              - name: Docker arg
+                uri: models/quickstart/common/.docs/advanced/docker_arg.md
+              - name: Launch benchmark instructions
+                uri: models/benchmarks/image_recognition/tensorflow/resnet50/inference/fp32/.docs/advanced/launch_benchmark_instructions.md
+              name: Advanced.md
+              text_replace:
+                <mode>: inference
+                <model name>: ResNet50 V1
+                <precision>: FP32
+                <use case>: image_recognition
+                <docker image>: intel/intel-optimized-tensorflow:latest
+              uri: models/benchmarks/image_recognition/tensorflow/resnet50/inference/fp32
           args:
               - PACKAGE_NAME=resnet50-fp32-inference
           files:
