--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,8 +1,13 @@
 # Lines starting with '#' are comments.
 # Each line is a file pattern followed by one or more owners.
 
-# These owners will be the default owners for everything in the repo.
-*   @mlukaszewski @claynerobison @chuanqi129 @agramesh1 @justkw
+# These owners will be the default owners for everything in the repo,
+# but PR owner should be able to assign other contributors when appropriate
+*    @ashahba @claynerobison @dmsuehir
+datasets @ashahba @claynerobison @dzungductran
+docs @claynerobison @mhbuehler
+k8s  @ashahba @dzungductran @kkasravi
+models @agramesh1 @ashraf-bhuiyan @riverliuintel @wei-v-wang
 
 # Order is important. The last matching pattern has the most precedence.
 # So if a pull request only touches javascript files, only these owners
@@ -10,8 +15,4 @@
 #*.js    @octocat @github/js
 
 # You can also use email addresses if you prefer.
-#docs/*  docs@example.com
 
-# paddlepaddle
-**/paddlepaddle/** @kbinias @sfraczek @Sand3r- @lidanqing-intel @ddokupil @pmajchrzak @wojtuss
-**/PaddlePaddle/** @kbinias @sfraczek @Sand3r- @lidanqing-intel @ddokupil @pmajchrzak @wojtuss
