--- a/tools/docker/specs/centos/tensorflow/mobilenet-v1-fp32-inference_spec.yml
+++ b/tools/docker/specs/centos/tensorflow/mobilenet-v1-fp32-inference_spec.yml
@@ -51,7 +51,7 @@ slice_sets:
           <package name>: mobilenet-v1-fp32-inference.tar.gz
           <package dir>: mobilenet-v1-fp32-inference
           <docker image>: intel/image-recognition:tf-latest-mobilenet-v1-fp32-inference
-        - docs:
+        docs:
         - name: Title
           uri: models/quickstart/image_recognition/tensorflow/mobilenet_v1/inference/cpu/fp32/.docs/title.md
         - name: Description
