--- a/tools/docker/specs/centos/pytorch/spr-resnet50-training_spec.yml
+++ b/tools/docker/specs/centos/pytorch/spr-resnet50-training_spec.yml
@@ -45,6 +45,8 @@ slice_sets:
             uri: models/quickstart/image_recognition/pytorch/resnet50/training/cpu/.docs/description.md
           - name: Model Package
             uri: models/quickstart/image_recognition/pytorch/resnet50/training/cpu/.docs/wrapper_package.md
+          - name: Quickstart
+            uri: models/quickstart/image_recognition/pytorch/resnet50/training/cpu/.docs/quickstart.md
           - name: Datasets
             uri: models/quickstart/image_recognition/pytorch/resnet50/training/cpu/.docs/datasets.md
           - name: Container build
